添加公共header和nav组件

--- a/遇到的问题.md
+++ b/遇到的问题.md
@@ -10,7 +10,7 @@
         <input type="password" placeholder="请输入您的密码" />
         <span class="login-form-group-forget">忘记密码？</span>
     </div>
-    <div class="font-26">登录</div>
+    <div class="font-26 login-form-group-forget-test">登录</div>
 </section>
 //css-stylus
 &-group+&-group
@@ -18,7 +18,11 @@
 
     &-forget
         ... //这种情况选择器不生效
+    
+    &-forget-test
+        ... //这种也不生效
 
     ```
     
 2. 在chrome调试中，切换手机类型后，必须要刷新才能响应式
+
